fixed main images horizontal scroll

--- a/css/contacto.css
+++ b/css/contacto.css
@@ -9,6 +9,10 @@
   padding-bottom: 2rem;
 }
 
+.contacto p {
+  padding-bottom: 20px;
+}
+
 .contacto__titulo {
   color: var(--fuente-ceniza-oscuro);
   font-weight: 700;
