--- a/css/destacados.css
+++ b/css/destacados.css
@@ -32,6 +32,7 @@
   font-weight: 700;
   font-size: 1.2rem;
   line-height: normal;
+  text-align: center;
 }
 
 .destacados__boton {
@@ -42,5 +43,5 @@
 
 /* Media queries */
 
-@media screen and (min-width: 678px) {
-}
+/* @media screen and (min-width: 678px) {
+} */
