--- a/css/reset.css
+++ b/css/reset.css
@@ -1,10 +1,4 @@
 html,
-body {
-  max-width: 100%;
-  overflow-x: hidden;
-}
-
-html,
 body,
 div,
 span,
