--- a/css/sobre-nosotros.css
+++ b/css/sobre-nosotros.css
@@ -18,6 +18,7 @@
 .sobre_nosotros__texto {
   line-height: normal;
   margin-bottom: 1rem;
+  text-align: justify;
 }
 
 .sobre_nosotros__plataformas {
